--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,4 +40,4 @@ jobs:
       run: npm install -g surge
       
     - name: Deployinng on Surge
-      run: surge ./build http://bootcamp-2020_class-2.surge.sh/ --token ${{ secrets.SURGE_TOKEN }}
+      run: surge ./build http://bootcamp-2020_class-2.surge.sh --token ${{ secrets.SURGE_TOKEN }}
